--- a/src/index.css
+++ b/src/index.css
@@ -42,8 +42,15 @@ h1 {
 
 h2 {
   text-align: center;
-  margin-bottom: 2.8rem;
-  letter-spacing: 2px;
+  margin-bottom: 2.2rem;
+  letter-spacing: 3px;
+}
+
+h2 span {
+  font-family: "Twemoji Country Flags";
+  font-size: 3.4rem;
+  margin-left: 0.6rem;
+  vertical-align: middle;
 }
 
 input {
